# internals/models/scan.go
@@ -40,12 +40,13 @@ func (s *SymptomList) Scan(value interface{}) error {
 
 type Scan struct {
 	gorm.Model
-	UserID           uint        `json:"user_id" gorm:"index;not null"`
-	PlantID          uint        `json:"plant_id" gorm:"index"`
-	AnalysisID       uint        `json:"analysis_id"`
-	CapturedImageUrl string      `json:"captured_image_url" gorm:"size:500"`
-	SelectedSymptoms SymptomList `gorm:"type:json"`
-	Retake           bool        `json:"retake" gorm:"default:false"`
-	ConfidenceScore  float64     `json:"confidence_score" gorm:"default:0"`
-	AiOutputID       uint        `json:"ai_output_id"`
+	UserID                      uint        `json:"user_id" gorm:"index;not null"`
+	PlantID                     uint        `json:"plant_id" gorm:"index"`
+	AnalysisID                  uint        `json:"analysis_id"`
+	CapturedImageUrl            string      `json:"captured_image_url" gorm:"size:500"`
+	SelectedSymptoms            SymptomList `gorm:"type:json"`
+	Retake                      bool        `json:"retake" gorm:"default:false"`
+	ConfidenceScore             float64     `json:"confidence_score" gorm:"default:0"`
+	AiOutputID                  uint        `json:"ai_output_id"`
+	JsonIdentificationPayload   string      `json:"json_identification_payload" gorm:"type:text"`
 }
